Fixed alignment on mobile

--- a/src/app/dashboard/strategy-list/strategy-list.component.scss
+++ b/src/app/dashboard/strategy-list/strategy-list.component.scss
@@ -98,7 +98,9 @@
     padding: 0em 1em;
     display: flex;
     gap: 1em;
-
+    @include responsive(small){
+      flex-direction: column;
+    }
     select, #vaults-search {
       position: relative;
       padding: 0.2em;
@@ -109,6 +111,9 @@
 
     #vaults-search{
       margin-left: auto;
+      @include responsive(small){
+        width: 100%;
+      }
     }
   }
 }
